# Slinky3D

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/FallingCubes/: main.cpp
examples/Particles/: cube.frag  cube.vert  main.cpp
examples/common/: Camera.hpp  CubeMesh.hpp  Shader.hpp
include/Slinky/Collision/: AABB.h
include/Slinky/Dynamics/: RigidBody.hpp  World.hpp
include/Slinky/Math/: Mat3.hpp  Mat4.hpp  Vector3.hpp
include/Slinky/Particle/: PContact.hpp  PWorld.hpp  Particle.hpp
modules/: FindCorrade.cmake  FindMagnum.cmake  FindSDL2.cmake
src/Slinky/Dynamics/: RigidBody.cpp  World.cpp
src/Slinky/Particle/: PWorld.cpp  Particle.cpp
